<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc"
    tools:context=".MapsActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/relativeLayout"
        android:id="@+id/relativeLayout2"
        android:background="#f7f8ff"
        android:layout_alignParentTop="true">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/button5"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/button5"
            android:scrollIndicators="right">


            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="fill_horizontal|top|left|bottom|fill_vertical|right">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/app_name"
                    android:id="@+id/textView3"
                    android:layout_alignParentTop="true"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/app_about"
                    android:id="@+id/textView4"
                    android:layout_below="@+id/textView3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tagging"
                    android:id="@+id/textView5"
                    android:layout_below="@+id/textView4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tagging_info"
                    android:id="@+id/textView6"
                    android:layout_below="@+id/textView5" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:layout_below="@+id/textView6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/finding"
                    android:id="@+id/textView7"
                    android:layout_below="@+id/textView6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/finding_info"
                    android:id="@+id/textView8"
                    android:layout_below="@+id/textView7" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView1"
                    android:layout_below="@+id/textView8" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/notification_info"
                    android:id="@+id/textView9"
                    android:layout_below="@+id/imageView1" />

            </RelativeLayout>
        </ScrollView>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Back"
            android:id="@+id/button5"
            android:layout_alignParentTop="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout"
        android:background="#1c1c04">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="0dp"
            android:gravity="bottom">

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:src="@mipmap/savecar"
                android:scaleType="centerCrop"
                android:adjustViewBounds="false" />

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button2"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:src="@mipmap/mapview"
                android:scaleType="centerCrop" />

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button3"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:src="@mipmap/listview"
                android:scaleType="centerCrop" />

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button4"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/about" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>